Fix header alignment and fade in transition length

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,11 +5,15 @@
   display: flex;
   justify-content: space-between;
   padding: 1rem 0;
-  align-items: center;
+  align-items: flex-end;
   z-index: 10;
 
   &_title {
     margin: 0;
+    a {
+      line-height: 0;
+      margin: 0;
+    }
   }
 
   &_logo {
